<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.revenat</groupId>
    <artifactId>germes</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>

    <modules>
        <module>germes-application-model</module>
        <module>germes-application-service</module>
        <module>germes-presentation-admin</module>
        <module>germes-persistence</module>
        <module>germes-presentation-rest</module>
        <module>germes-presentation-client</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--misc-->
        <jaxb.version>2.3.2</jaxb.version>
        <commons-lang3.version>3.9</commons-lang3.version>
        <hibernate-tools.version>5.2.12.Final</hibernate-tools.version>
        <jakarta.inject.version>2.6.1</jakarta.inject.version>
        <jakarta.annotations.version>1.3.4</jakarta.annotations.version>
        <javassist.version>3.26.0-GA</javassist.version>
        <reflections.version>0.9.12</reflections.version>
        <hibernate-validatior.version>6.0.18.Final</hibernate-validatior.version>
        <validation-api.version>2.0.1.Final</validation-api.version>
        <el-version>3.0.1-b09</el-version>
        <jandex.version>2.0.3.Final</jandex.version>
        <swagger.version>1.6.0</swagger.version>
        <guava.version>20.0</guava.version>
        <cdi.version>2.0</cdi.version>
        <lombok.version>1.18.10</lombok.version>

        <!--server-->
        <jersey.version>2.29.1</jersey.version>
        <servlet.version>3.1.0</servlet.version>
        <weld.version>3.1.3.Final</weld.version>

        <!--logging-->
        <log4j.version>2.13.0</log4j.version>
        <jbossLogging.version>3.3.2.Final</jbossLogging.version>

        <!--ui-->
        <jsf.version>2.3.9</jsf.version>
        <primefaces.version>6.2</primefaces.version>
        <primefaces-bootstrap.version>1.0.10</primefaces-bootstrap.version>

        <!--persistence-->
        <hibernate.version>5.2.18.Final</hibernate.version>
        <h2.version>1.4.200</h2.version>
        <sqLite.version>3.30.1</sqLite.version>
        <mysql.version>5.1.47</mysql.version>

        <!--security-->
        <shiro.version>1.4.0</shiro.version>

        <!--tests-->
        <jersey-junit.version>2.1.0</jersey-junit.version>
        <commonsLogging.version>1.2</commonsLogging.version>
        <cdunit.version>4.1.0</cdunit.version>
        <junit.version>5.5.1</junit.version>
        <hamcrest.version>2.1</hamcrest.version>
        <mockito.version>3.0.0</mockito.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>${jersey.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${log4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>${commonsLogging.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.logging</groupId>
                <artifactId>jboss-logging</artifactId>
                <version>${jbossLogging.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.hanleyt</groupId>
                <artifactId>jersey-junit</artifactId>
                <version>${jersey-junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest</artifactId>
                <version>${hamcrest.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.2.3</version>
                </plugin>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>11</release>
                        <showWarnings>true</showWarnings>
                        <showDeprecation>true</showDeprecation>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M3</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                        <argLine>-Dfile.encoding=UTF8</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.0.0-M3</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>